<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup_page"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash_screen_logo"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/signup_page_img"

        >

    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registered"
            android:textColor="#FF7043"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            style="@style/login_page"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/ed_username_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/username"
            android:layout_marginTop="25dp"
            style="@style/login_page"

            />
        <EditText
            android:id="@+id/ed_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            style="@style/login_page"
            />
<!--        <EditText-->
<!--            android:id="@+id/ed_conform_password_signup"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="25dp"-->
<!--            android:hint="@string/conform_password"-->
<!--            style="@style/login_page"-->
<!--            />-->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            style="@style/login_page"
            android:background="@drawable/custom_btn_report"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:gravity="end"
                android:text="@string/have_an_account"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="25sp"
                android:textStyle="bold"
                android:id="@+id/txt_vw_login_here"

                android:text="@string/login_here"

                >

            </TextView>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>