<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".report_issue"
    android:orientation="vertical"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar3"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_report_issue"
            app:titleTextColor="@color/white">
            <!--            app:subtitleTextColor="@color/white"-->

            <LinearLayout
                android:id="@+id/ll_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/report_an_issue_txt"
            android:text="@string/report_issue_txt"
            android:textSize="20sp"
            android:textColor="@color/black"
            style="@style/report_issue"

            >


        </TextView>
        <EditText
            style="@style/report_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_name_report_txt"
            android:hint="@string/report_issue_first_name"

            >

        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/last_name_report_issue"
            android:hint="@string/report_issue_last_name"
            style="@style/report_issue"
            >

        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_report_txt"
            android:hint="@string/report_issue_email"
            style="@style/report_issue"
            >

        </EditText>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/report_issue"
            android:id="@+id/spinner_report_issue"
            >

        </Spinner>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_txt_report_issue_comment"
            style="@style/report_issue"

            />
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--            android:padding="20dp"-->
<!--            android:layout_margin="8dp"-->
<!--            android:hint="@string/app_name"-->
<!--            >-->



<!--&lt;!&ndash;            android:layout_marginEnd="32dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_marginStart="32dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_marginTop="64dp"&ndash;&gt;-->
<!--            &lt;!&ndash;               Criticality level    &ndash;&gt;-->
<!--        <EditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/edit_txt_report_issue_comment"-->

<!--            />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@drawable/custom_btn_report"
            android:textColor="@color/white"
            android:layout_gravity="center"
            style="@style/report_issue"
            android:textSize="30sp"
            android:id="@+id/btn_report_issue"

            >

        </Button>

    </LinearLayout>

</LinearLayout>